--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -15,22 +15,14 @@
                       (keyup.escape)="emitValue(null)"/>
     </md-input-container>
 
-    
-
-    
-  
+    <md-card-actions class="center">
+        <button md-button (click) = 'emitValue(null)' color='primary'>
+          {{cancelText}}
+        </button>
+        <button md-raised-button (click)="emitValue(value)" color="primary">
+          {{okText}}
+        </button>
+    </md-card-actions>
   </md-card>
 </div>
 
-<md-input-container class="full-width">
-    <input mdInput [placeholder]="placeholder"
-                  (keyup.enter)="emitValue(value)"
-                  (keyup.escape)="emitValue(null)"/>
-</md-input-container>
-
-<button md-button (click) = 'emitValue(null)' color='primary'>
-  {{cancelText}}
-</button>
-<button md-raised-button (click)="emitValue(value)" color="primary">
-  {{okText}}
-</button>
