--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -7,19 +7,19 @@
       <br>
       {{template}}
     </md-card-content>
-
-
     <md-input-container class="full-width">
-        <input mdInput [placeholder]="placeholder"
-                      (keyup.enter)="emitValue(value)"
-                      (keyup.escape)="emitValue(null)"/>
+
+        <input mdInput 
+            [placeholder] = "placeholder"
+            [(ngModel)] = 'myValue'>                      
     </md-input-container>
+  
 
     <md-card-actions class="center">
         <button md-button (click) = 'emitValue(null)' color='primary'>
           {{cancelText}}
         </button>
-        <button md-raised-button (click)="emitValue(value)" color="primary">
+        <button md-raised-button (click)="emitValue(myValue)" color="primary">
           {{okText}}
         </button>
     </md-card-actions>
